add corrections managementsummary

--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -14,11 +14,11 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Management Summary}
-Eine Kreuzbandverletzung sollte, um Folgeschäden zu vermeiden, immer bestmöglich geheilt sein. Aus diesem Grund wird an der Eidgenössischen Hochschule für Sport in Magglingen ein Test geleitet durch einen Physiotherapeuten am verletzten Sportler durchgeführt. Der Sportler absolviert dabei diverse Übungen mit unterschiedlichen Belastungen des Knies. Die seitliche Auslenkung des Knies lässt auf seinen Genesungszustand schliessen. Dieser Test ist durch seine Subjektivität nicht die bestmögliche Lösung. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten. Eine zusätzliche Angabe der absoluten Auslenkung wäre für die Therapeuten hilfreich. Ziel der Arbeit ist es, ein Konzept zu entwickelt, damit dem Therapeuten eine Basis für eine begründete Diagnose bereitsteht. Dazu soll ein 3D-Beschleunigungssensor verwendet werden.\par
+Eine Kreuzbandverletzung sollte, um Folgeschäden zu vermeiden, immer bestmöglich geheilt sein. Aus diesem Grund wird an der Eidgenössischen Hochschule für Sport in Magglingen ein Test geleitet durch einen Physiotherapeuten am verletzten Sportler durchgeführt. Der Sportler absolviert dabei diverse Übungen mit unterschiedlichen Belastungen des Knies. Die seitliche Auslenkung des Knies lässt auf seinen Genesungszustand schliessen. Dieser Test ist durch seine Subjektivität nicht die bestmögliche Lösung. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten. Eine zusätzliche Angabe der absoluten Auslenkung wäre für die Therapeuten hilfreich. Ziel der Arbeit ist es, ein Konzept zu entwickeln, damit dem Therapeuten eine Basis für eine begründete Diagnose bereitsteht. Dazu soll ein 3D-Beschleunigungssensor verwendet werden.\par
 %
-Über das letzte Jahrzehnt wurde viel Forschung zur Analyse von Bewegungsabläufen mit 3D-Beschleunigungssensoren betrieben. Die Methoden können hauptsächlich auf direkte Integrationsmethoden und auf indirekte Kalman Filter basierende Methoden aufgeteilt werden. Da das Ziel dieser Arbeit die Bestimmung der seitlichen Knieauslenkung in statischen Tests ist, wurde in einem ersten Ansatz ein zweiteiliges Konzept entwickelt. In einem ersten Schritt wird während einer Kalibrationsphase die Orientierung des Sensors geschätzt und durch eine Rotation so kompensiert, dass die Projektion der Gravitation auf die horizontale Knieebene minimiert wird. In einem zweiten Schritt wird die seitliche Auslenkung des Knies durch direkte Integration ermittelt. Die Rotationswinkel des ersten Schrittes wurden mit den tiefpassgefilterten 3D-Beschleunigungsdaten geschätzt. Zur Integration auf der horizontalen Knieebene mittels Trapezmethode wurde ein äquivalentes digitales \acrshort{ac:iir}-Filter entwickelt. Dieses Konzept wurde in \gls{g:matlab} umgesetzt und auf den spezifisch erfassten experimentellen Daten validiert. Das Konzept wurde anschliessend auf einem \acrshort{ac:fpga} umgesetzt.\par
+Über das letzte Jahrzehnt wurde viel Forschung zur Analyse von Bewegungsabläufen mit 3D-Beschleunigungssensoren betrieben. Die Methoden können hauptsächlich auf direkte Integrationsmethoden und auf indirekte Kalman Filter basierende Methoden aufgeteilt werden. Da das Ziel dieser Arbeit die Bestimmung der seitlichen Knieauslenkung in statischen Tests ist, wurde in einem ersten Ansatz ein zweiteiliges Konzept entwickelt. In einem ersten Schritt wird, während einer Kalibrationsphase die Orientierung des Sensors geschätzt und durch eine Rotation so kompensiert, dass die Projektion der Gravitation auf die horizontale Knieebene minimiert wird. In einem zweiten Schritt wird die seitliche Auslenkung des Knies durch direkte Integration ermittelt. Die Rotationswinkel des ersten Schrittes wurden mit den tiefpassgefilterten 3D-Beschleunigungsdaten geschätzt. Zur Integration auf der horizontalen Knieebene mittels Trapezmethode wurde ein äquivalentes digitales \acrshort{ac:iir}-Filter entwickelt. Dieses Konzept wurde in \gls{g:matlab} umgesetzt und auf den spezifisch erfassten experimentellen Daten validiert. Das Konzept wurde anschliessend auf einem \acrshort{ac:fpga} umgesetzt.\par
 %
-Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zum Erdbeschleunigungsvektor auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich validiert. Die Auslenkung des Knies in der Berechnungsebene wurde ebenfalls in einem experimentellen Umfeld ausgewertet. Dabei wurde eine Performance von \unit[-4.81]{cm} $\pm$\unit[0.35]{cm} bei einer Translation um \unit[-5]{cm}{dimension} erreicht. Für kleine Knieauslenkungen in der Integrationsebene ergibt sich daher eine Schätzungsgenauigkeit, die für die vorliegende Anwendung bei weitem ausreicht. Bei Auslenkungen, die zusätzlich eine Rotation beinhalten, erhöht sich der Fehler durch die Projektion der Gravitationskomponente auf die Integrationsebene. Diese Verfälschung wird mit integriert und führt zu einem Fehler in der Auslenkungsschätzung. Durch die theoretische Analyse dieser Auslenkungsfehler konnte das Konzept mit der Entwicklung eines Modells weiter verfeinert werden. Dieses Modell dient als Grundlage zur Erarbeitung zukünftiger Auslenkungsschätzungsmethoden.
+Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zum Erdbeschleunigungsvektor auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich validiert. Die Auslenkung des Knies in der Berechnungsebene wurde ebenfalls in einem experimentellen Umfeld ausgewertet. Dabei wurde eine Performance von \unit[-4.81]{cm} $\pm$\unit[0.35]{cm} bei einer Translation um \unit[-5]{cm} erreicht. Für kleine Knieauslenkungen in der Integrationsebene ergibt sich daher eine Schätzungsgenauigkeit, die für die vorliegende Anwendung bei weitem ausreicht. Bei Auslenkungen, die zusätzlich eine Rotation beinhalten, erhöht sich der Fehler durch die Projektion der Gravitationskomponente auf die Integrationsebene. Diese Verfälschung wird mit integriert und führt zu einem Fehler in der Auslenkungsschätzung. Durch die theoretische Analyse dieser Auslenkungsfehler konnte das Konzept mit der Entwicklung eines Modells weiter verfeinert werden. Dieses Modell dient als Grundlage zur Erarbeitung zukünftiger Auslenkungsschätzungsmethoden.
 
 
 
