no capital letters for sort-sections in the glossar/acronym-list

--- a/report.tex
+++ b/report.tex
@@ -268,7 +268,7 @@
 % Abkürtzungsverzeichnis / Glossar
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \renewcommand*{\glossaryname}{Glossar}
-\glossarystyle{listgroup}
+%\glossarystyle{listgroup}
 \printglossary[type=main]
 \addcontentsline{toc}{chapter}{Glossar}
 \deftranslation[to=German]{Acronyms}{Abkürzungsverzeichnis} 
