--- a/content/4_implementierung/implementierung.tex
+++ b/content/4_implementierung/implementierung.tex
@@ -181,9 +181,9 @@
 	Um eine Aussage bezüglich der Güte der Implementation machen zu können, muss diese mit dem Konzept verglichen werden. Dazu müssen identische Rohdaten durch die beiden Abläufe (\gls{g:matlab}-Skript \texttt{XXX} und \gls{g:labview}-Projekt \texttt{reametric}) verarbeitet und die Ergebnisse einander gegenübergestellt werden\footnote{Durch die Tatsache, dass das \gls{g:matlab}-Skript segment-basiert und die Implementierung sample-basiert arbeiten können nicht dieselben Daten verwendet werden (hätte eine Abänderung der Implementierung oder des Konzepts zur Folge). Deshalb werden zwei unabhängige Messungen unter den identischen Bedingungen durchgeführt und jeweils ausgewertet.}. Angelehnt an die drei Protokolle in den Abschnitten \ref{s:verifikation_rotation} bis \ref{s:verifikation_transaltion_rotation} werden dabei speziell die \textsf{Rotation}, \textsf{Translation} und \textsf{Rotation, Translation überlagert} kontrolliert\footnote{Auf Grund der negativen Ergebnisse der Protokolle wird auf ein detailliertes wiederholen verzichtet und die Implementation nur prinzipiell Überprüft}.
 	%
 	\subsection*{Schätzung Rotationswinkel und Rotation}
-		Für das Überprüfen der Rotationswinkel und der anschliessenden Rotation wird ein statische Messung in z-Position (erläutert in Abschnitt \vref{ss:methode_tran}, Testbeschreibung) durchgeführt. Die Kontrolle beschränkt sich auf das Endergebnis der Rotation, das $a_{Soll}=[0\quad0\quad 9.81]$ sein sollte.\par
+		Für das Überprüfen der Rotationswinkel und der anschliessenden Rotation wird eine statische Messung in z-Position (erläutert in Abschnitt \vref{ss:methode_tran}, Testbeschreibung) durchgeführt. Die Kontrolle beschränkt sich auf das Endergebnis der Rotation, das $a_{Soll}=[0\quad0\quad 9.81]$ sein sollte.\par
 		%
-		Wie erwartet liefert das Konzept ein ähnliches Resultat von $a_{Konzept} = [-0.004\quad0.004\quad9.971]$. Unter den gleichen Bedingungen errechnet die Implementierung einen Beschleunigungsvektor von $a_{Implementation}=[0.008\quad0.013\quad9.934]$. Vergleicht man die beiden Resultate, kann man auf eine korrekte Implementation des Konzepts schliessen. Die geringen Abweichungen könnten darin Begründet sein, das die Auflösung der verwendeten Datentypen sich in \gls{g:matlab} und \gls{g:labview} unterscheiden. 
+		Wie erwartet liefert das Konzept ein ähnliches Resultat von $a_{Konzept} = [-0.004\quad0.004\quad9.971]$. Unter den gleichen Bedingungen errechnet die Implementierung einen Beschleunigungsvektor von $a_{Implementation}=[0.008\quad0.013\quad9.934]$. Vergleicht man die beiden Resultate, kann man auf eine korrekte Implementation des Konzepts schliessen. Die geringen Abweichungen könnten darin Begründet sein, dass die Auflösung der verwendeten Datentypen sich in \gls{g:matlab} und \gls{g:labview} unterscheiden. 
 	%	
 	\subsubsection*{Translation}
 		Wiederum werden zwei Messungen in der z-Position durchgeführt. Zusätzlich zu der Kalibrationsphase wird nun noch eine Translation in der \gls{g:transversalebene} von \unit[5]{cm} in y-Richtung durchgeführt (Bewegungszeit \unit[1]{s}). Erwartet wird ein zurückgelegter Weg von \unit[5]{cm} (mit einer Abweichung von $\pm$\unit[1]{cm}) in der gefahrenen Richtung.\par
@@ -193,7 +193,7 @@
 		Die Analyse des ungenügenden Resultats konnte auf eine fehlerhafte Integration durch die \gls{ac:iir}-Filter zurückgeführt werden. Simulationen mit bekannten Signalen kräftigen die Vermutung, dass der Fehler mit der Abtastrate der Beschleunigungsdaten zusammenhängt. Folgende Untersuchungen müssen dies jedoch noch bestätigen.
 	%
 	\subsubsection*{Rotation, Translation überlagert}
-		Wegen dem negative Resultat des Protokolls in Abschnitt \vref{s:verifikation_transaltion_rotation} und dem bekannten fehlerbehafteten Integrieren der Implementation	wird auf eine genauere Untersuchung dieses Testfalls verzichtet. Konzeptbedingt ist dazu kein aussagekräftiger Vergleich zu erwarten.
+		Wegen dem negativen Resultat des Protokolls in Abschnitt \vref{s:verifikation_transaltion_rotation} und dem bekannten fehlerbehafteten Integrieren der Implementation	wird auf eine genauere Untersuchung dieses Testfalls verzichtet. Konzeptbedingt ist dazu kein aussagekräftiger Vergleich zu erwarten.
 		
 		
 		
