--- a/content/6_schlusswort/schlusswort.tex
+++ b/content/6_schlusswort/schlusswort.tex
@@ -13,7 +13,7 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%    
 \chapter{Schlusswort}\label{ch:schlusswort}
-	Bedingt durch das Engagement im Eurobot-Projekt standen uns für diese Arbeit nur 5 Wochen zur Verfügung. In dieser Zeit hatten wir uns das nötige Wissen anzueignen, die Aufgabenstellung zu analysieren und die gestellten Anforderungen umzusetzen. Wie es sich während den Projektphasen zeigte, reichte diese Zeit nicht aus, um uns in die relevanten Aspekte der Biomechanik gebührend einzulesen und gleichzeitig eine Umsetzung anzustreben. Durch dies bedingt musste wir bei der Algorithmus-Entwicklung wiederholt Erneuerungen anbringen, was schlussendlich eine solide Realisierung verunmöglichte. Weiter wären klare und im Voraus bekannte Ziele und Anforderungen wünschenswert gewesen. Wir verstehen, dass dies bei einem Forschungsprojekt nicht möglich ist. Dies hätte uns jedoch den Einstieg in die Thematik stark vereinfacht.\par
+	Bedingt durch das Engagement im Eurobot-Projekt standen uns für diese Arbeit nur 5 Wochen zur Verfügung. In dieser Zeit hatten wir uns das nötige Wissen anzueignen, die Aufgabenstellung zu analysieren und die gestellten Anforderungen umzusetzen. Wie es sich während den Projektphasen zeigte, reichte diese Zeit nicht aus, um uns in die relevanten Aspekte der Biomechanik gebührend einzulesen und gleichzeitig eine Umsetzung anzustreben. Deshalb mussten wir bei der Algorithmus-Entwicklung wiederholt Erneuerungen anbringen, was schlussendlich eine solide Realisierung verunmöglichte. Weiter wären klare und im Voraus bekannte Ziele und Anforderungen wünschenswert gewesen. Wir verstehen, dass dies bei einem Forschungsprojekt nicht möglich ist. Dies hätte uns jedoch den Einstieg in die Thematik stark vereinfacht.\par
 %	
 Es ist weiter zu hoffen, dass in naher Zukunft das Eurobot-Projekt besser mit der folgenden Thesis-Arbeiten harmoniert. Dies würde eine grössere Zufriedenstellung für die Studierenden sowie die betreuenden Dozenten sicherstellen.\par
 	%
