--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -16,7 +16,7 @@
 \section{Ergebnis der Arbeit}
 Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zur Gravitation auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich verifiziert. Alle Messungen der Winkelschätzung hatten eine grosse Konstanz. Untereinander weichten die Messungen im schlechtesten Fall um nur $\pm$\unit[0.152]{°} ab. Die Auslenkung des Knies in der \gls{g:transversalebene} wurde ebenfalls in einem experimentellen Umfeld ausgewertet. Dabei wurde für den Fall einer Translation eine geeignete Performance erreicht. Bei einer Translation um beispielsweise -5 cm wurde ein Mittelwert von \unit[-4.81]{cm} mit einer Standardabweichung von $\pm$\unit[0.35]{cm} ermittelt.\par
 %
-Bei Auslenkungen, welche zusätzlich eine Rotation beinhalten, erhöhen sich die Fehler durch die Projektionen der Gravitationskomponente auf die \gls{g:transversalebene}. Diese Verfälschung wird mit integriert und führt zu nicht akzeptablen Fehlern in der Auslenkungsschätzung. Das Konzept ist bei dieser Art von Bewegung noch fehlerhaft. Hier besteht diesbezüglich noch Verbesserungspotenzial.\par
+Bei Auslenkungen, welche zusätzlich eine Rotation beinhalten, erhöhen sich die Fehler durch die Projektionen der Gravitationskomponenten auf die \gls{g:transversalebene}. Diese Verfälschung wird mit integriert und führt zu nicht akzeptablen Fehlern in der Auslenkungsschätzung. Das Konzept ist bei dieser Art von Bewegung noch fehlerhaft. Hier besteht diesbezüglich noch Verbesserungspotenzial.\par
 %
 Die theoretische Analyse der Bewegung am Knie bietet die Möglichkeit weitere Verbesserungsmöglichkeiten am Konzept aufzuzeigen. Die Bewegung kann mittels eines Modells in einen dynamischen und einen statischen Fall unterteilt werden. Das Model beschreibt die Bewegung als eine harmonische Funktion. Der dynamische Fall unterscheidet sich vom statischen durch eine definierte Grenzfrequenz. Diese ist nur abhängig von der Kniehöhe. Im dynamischen Fall hat bei einer Auslenkung, welche eine Translation und eine Rotation beinhaltet, die projektierte Gravitation einen vernachlässigbar kleinen Einfluss. Dieses Modell wurde mathematisch hergeleitet und anschliessend simuliert und soll als Grundlage zur Erarbeitung zukünftiger Auslenkungs-Schätzungsmethoden dienen.\par 
 %
@@ -27,7 +27,7 @@ Die Implementation wurde in \gls{g:labview} durchgeführt. Aufgrund der Probleme 
 %
 % Soll/Ist-Vergleich Zeitplan
 \section{Soll/Ist-Vergleich Zeitplan}\label{sec:sollist}
-	Der zu Beginn im Abschnitt \vref{ss:ablauf_gliederung_projekt} geplante Ablauf konnte bezogen auf die Arbeitsteilung zu grossen Teilen eingehalten werden. Eine Ausnahme ergab sich in der Konzeptphase, bei der es wegen Verzögerungen zwingend wurde, dass beide Autoren sich an der Entwicklung des Algorithmus und der Experimental-Protokollen beteiligten. Hinsichtlich der Beurteilbarkeit des Projekts wurde jedoch darauf geachtet, dass die Mehrheit der Arbeit demjenigen Autor zufiel, der auch die Verantwortung für das \acrfull{ac:ap} trug.\par
+	Der zu Beginn im Abschnitt \vref{ss:ablauf_gliederung_projekt} geplante Ablauf konnte bezogen auf die Arbeitsteilung zu grossen Teilen eingehalten werden. Eine Ausnahme ergab sich in der Konzeptphase, bei der es wegen Verzögerungen zwingend wurde, dass beide Autoren sich an der Entwicklung des Algorithmus und der Experimental-Protokollen beteiligten. Hinsichtlich der Beurteilbarkeit des Projekts wurde jedoch darauf geachtet, dass die Mehrheit der Arbeit demjenigen Autor zufiel, der auch die Verantwortung für das Arbeitspacket (\acrshort{ac:ap}) trug.\par
 	%
 	Die angetönte Verzögerung während der Konzeptphase hatte auch grossen Einfluss auf den definierten Zeitplan. Anstatt der vorgesehenen Aufwand von drei Tage für die Entwicklung des Algorithmus mussten deren 11 eingesetzt werden. Durch diesen Fakt wurden alle folgenden \gls{ac:ap}s und Meilensteine zeitlich nach hinten verschoben. Dies hatte zur Folge, dass weniger Zeit für diese Arbeiten aufgewendet werden konnte. Insbesonders die \gls{ac:ap} \textsf{Umsetzung \gls{g:matlab} $\rightarrow$ \gls{g:labview}}, \textsf{Soll/Ist-Vergleich} und \textsf{Zusammenfassung der Resultate} mussten stark eingeschränkt werden. Um die Erfüllung der Projektziele trotzdem zu ermöglichen wurden Massnahmen hinsichtlich dem entfernen der Pakete \textsf{Präsentation vorbereiten} und \textsf{Plakat erstellen} ergriffen\footnote{Die beiden \gls{ac:ap} müssen erst bei der Präsentation erledigt sein}. Weiter wurden die Arbeitszeiten erheblich erhöht. Durch dieses Vorgehen konnte Zeit gutgemacht werden, was schlussendlich zum genügenden Abschliessen aller \gls{ac:ap}s führte. Die zeitliche Entwicklung des Projekts kann gut in der Abbildung \vref{img:soll_ist} erkannt werden, bei der der geplante zeitliche Verlauf blau und der tatsächliche rot hervorgehoben ist. 
 	%
@@ -38,7 +38,7 @@ Die Implementation wurde in \gls{g:labview} durchgeführt. Aufgrund der Probleme 
 	\begin{itemize}
 		\item Das Konzept muss umgebaut werden, damit die Rotation kontinuierlich neu berechnet wird und nicht nur zu Beginn der Messung, wenn der Sensor in Ruhe ist.
 		\item Die berechnete Grenzfrequenz ist für die Entwicklung des verfeinerten Konzeptes zu beachten. Das Konzept kann damit in eine Berechnung der Bewegung im statischen Fall sowie im dynamischen Fall unterteilt werden.
-		\item In der Literaturstudie hat sich gezeigt, dass bei vielen Arbeiten zusätzlich ein \gls{g:gyroskop} oder ein \gls{g:magnetometer} verwendet wird. Hier ist genauer abzuklären ob eine Verwendung von verschiedenen Sensoren sinnvoll ist.		
+		\item In der Literaturstudie hat sich gezeigt, dass bei vielen Arbeiten zusätzlich ein \gls{g:gyroskop} oder ein \gls{g:magnetometer} verwendet wird. Hier ist genauer abzuklären, ob eine Verwendung von verschiedenen Sensoren sinnvoll ist.		
 		\item \gls{g:labview} nicht unter Windows 8.x verwenden. Die gesamte Toolchain verhält sich sehr instabil, ins besonders die USB-Treiber für das \gls{g:myrio}.
 		\item Der Testaufbau für die Verifizierung der Translation und Rotation kann in späteren Projekten verwendet werden. Ebenfalls steht dazu die aufgenommene Datenbasis zur Verfügung.
 	\end{itemize}
