--- a/bibliography.bib
+++ b/bibliography.bib
@@ -131,7 +131,7 @@
 
 @ONLINE{lit:rt_linux,
   url = {http://www.ni.com/white-paper/14626/de/},
-  title = {NI Linux Real Time},
+  title = {NI Linux Real-Time unter der Lupe},
   publisher = {National Instruments},
   urldate = {2014-06-04},
   year = {2014},
@@ -159,7 +159,7 @@
 
 @ONLINE{lit:ni_max,
   url = {http://digital.ni.com/public.nsf/allkb/71544521BDE34FFB86256FCF005F4FB6},
-  title = {NI MAX},
+  title = {What Is Measurement \& Automation Explorer (MAX)?},
   publisher = {National Instruments},
   urldate = {2014-06-05},
   year = {2014},
@@ -243,7 +243,7 @@
 
 @ONLINE{lit:knie,
   url = {http://emedicine.medscape.com/article/89442-overview},
-  title = {Anterior Cruciate Ligament Injury },
+  title = {Anterior Cruciate Ligament Injury},
   author = {Matthew Gammons},
   urldate = {2014-06-19},
   year = {2014},
