appendix cd done

--- a/appendix/cd/cd.tex
+++ b/appendix/cd/cd.tex
@@ -24,6 +24,26 @@
     	\end{itemize}
     %
     \section{MATLAB}\label{s:anhang_matlab}
+    	Die \gls{g:matlab}-Skripte die währende des Projekts verwendet wurden.
+    	\begin{itemize}
+	    	\item \texttt{Check\_Rotation\_final.m}
+	    	\item \texttt{Check\_Translation\_Rotation\_final.m}
+	    	\item \texttt{Dynamisch\_Statisch.m}
+	    	\item \texttt{Konzept\_Translation\_final.m}
+    	\end{itemize}
     %
     \section{Quellen Internet}\label{s:anhang_quellen_internet}
+    	Sicherungen der Internetquellen.
+    	\begin{itemize}
+	    	\item Anterior Cruciate Ligament Injury
+	    	\item How Do I Make an XY Graph Behave as an XY Chart
+	    	\item Lossless Communication with Network Streams Components Architecture and Performance
+	    	\item MATLAB script
+	    	\item NI Linux Real Time unter der Lupe
+	    	\item What Is Measurement Automation Explorer MAX
+    	\end{itemize}
+    %
+    \section{Datenblatt NI myRIO}\label{s:anhang_datasheets}
+    	
+    	
   
