--- a/appendix/datasheet/datasheet.tex
+++ b/appendix/datasheet/datasheet.tex
@@ -12,15 +12,15 @@
 %
 % 0.0.01      Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-\chapter{Industrie \acrshort{ac:icp} Beschleunigungssensor}\label{ch:indusriesensor}
-    Datenblatt des \acrshort{ac:icp} Beschleunigungssensors 603C01 von IMI Sensors.
-    \includepdf[scale=0.7,pagecommand={},page=-,landscape=true]{appendix/datasheet/src/603C01_H.pdf}
-%
-\chapter{\acrshort{ac:ni} USB-4431}\label{ch:niusb4431}
-	Datenblatt der \gls{ac:daq}-Karte \acrshort{ac:ni} USB-4431.
-	\includepdf[scale=0.7,pagecommand={},page=-,landscape=false]{appendix/datasheet/src/cat_usb4431.pdf}
+%\chapter{Industrie ICP Beschleunigungssensor}\label{ch:indusriesensor}
+%    Datenblatt des \acrshort{ac:icp} Beschleunigungssensors 603C01 von IMI Sensors.
+%    \includepdf[scale=0.7,pagecommand={},page=-,landscape=true]{appendix/datasheet/src/603C01_H.pdf}
+%%
+%\chapter{NI USB-4431}\label{ch:niusb4431}
+%	Datenblatt der \gls{ac:daq}-Karte \acrshort{ac:ni} USB-4431.
+%	\includepdf[scale=0.7,pagecommand={},page=-,landscape=false]{appendix/datasheet/src/cat_usb4431.pdf}
 %	
-\chapter{\gls{g:myrio}}\label{ch:datasheet_myrio}
+\chapter{NI myRIO}\label{ch:datasheet_myrio}
 	Datenblatt des \gls{ac:daq}\gls{g:myrio} Developmentboard.
 	\includepdf[scale=0.7,pagecommand={},page=-,landscape=false]{appendix/datasheet/src/myRIO_1900.pdf}
   
